<resources>

    <string name="app_name">FlowerRec</string>
    <string name="activity_main">MainActivity</string>
    <string name="cameraGalleryDemo">CameraGalleryDemo</string>
    <string name="cameraDemo">CameraDemo</string>
    <string name="editImageActivity">EditImageActivity</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="undo">撤销</string>
    <string name="check">校订</string>
    <color name="green">#00FF00</color>
    <string name="running_cut_process">请稍等</string>
    <string name="coarse_cut_button">粗调</string>
    <string name="crop">粗调</string>
        <string name="sub_crop">微调</string>
    <string name="rotate">旋转</string>
    <string name="rotate_left">向左旋转</string>
    <string name="rotate_right">向右旋转</string>
    <string name="reverse_transform">反转</string>
    <string name="resize">缩放</string>
    <string name="subtle_cut_button">微调</string>
    <string name="saturation">饱和度</string>
    <string name="lightness">亮度</string>
    <string name="contrast">色相</string>
    <string name="frame_doodle">边框涂鸦</string>
    <string name="frame">边框</string>
    <string name="doodle">涂鸦</string>
    <string name="multiface_crop_help">"轻点一张脸开始裁剪。"</string>
    <string name="saving_image">"正在保存照片..."</string>
    <string name="choose_img">请选择图片</string>
    <string name="load_failure">图片加载失败</string>
    <string name="resize_one_to_two">"1 to 2"</string>
    <string name="resize_one_to_three">"1 to 3"</string>
    <string name="resize_one_to_four">"1 to 4"</string>
    <string name="save_bitmap">正在保存图片...</string>
    <string name="no_found">没有找到图片哦</string>
    <string name="specific">特效</string>
    <string name="handling">处理中，请稍候...</string>
    <string name="album_button">相册</string>
    <string name="camera_button">相机</string>
     <string name="loading">加载相片中...</string>
     <string name="retrieval">搜索</string>
     <string name = "color">颜色</string>
     <string name = "width">宽度</string>
     <string name = "blur">模糊</string>
      <string name = "emboss">浮雕</string>
     
    <string-array name="specific_item">
        <item>怀旧</item>
        <item>模糊</item>
        <item>锐化</item>
        <item>叠加</item>
        <item>底片</item>
        <item>浮雕</item>
        <item>光照</item>
        <item>霓虹</item>
        <item>重叠</item>
    </string-array>
    	<string name="width_1">1像素</string>
	<string name="width_3">3像素</string>
	<string name="width_5">5像素</string>
	<string name="color_red">红色</string>
	<string name="color_green">绿色</string>
	<string name="color_blue">蓝色</string>
	<string name="color">画笔颜色</string>
	<string name="width">画笔宽度</string>
	<string name="blur">模糊效果</string>
	<string name="emboss">浮雕效果</string>	
</resources>