<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="#a0a060b4"
	>
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save_step"
        android:layout_weight="0"
        android:visibility="gone"
        >
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_step"
            android:onClick="onClick"
            android:background="@drawable/btn_step_save"
            android:layout_alignParentRight="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/handle_name"
            android:layout_centerInParent="true"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_step"
            android:onClick="onClick"
            android:background="@drawable/btn_step_cancel"
            android:layout_alignParentLeft="true"
            />
        
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save_all"
        android:layout_weight="0" 
        >

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:onClick="onClick"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="onClick"
            android:text="@string/save" />
        
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        >
        
        <view class="com.example.image.view.CropImageView"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:id="@+id/crop_image"
            android:layout_gravity="center">
            </view>
           
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        
        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/coarse_cut_button"
            android:text="@string/coarse_cut_button"
            android:onClick="onClick"
            android:drawableTop="@drawable/btn_edit"
            />
        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/subtle_cut_button"
            android:text="@string/subtle_cut_button"
            android:onClick="onClick"
            android:drawableTop="@drawable/btn_color"
            />
        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/retrieval"
            android:text="@string/retrieval"
            android:onClick="onClick"
            android:drawableTop="@drawable/btn_frame"
            />
        
    </LinearLayout>


    
</LinearLayout>
